--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,30 @@
-Login Works
+<div class="container">
+    <div class="row">
+        <div class="col-4 offset-4">
+            <div class="card mt-5">
+                <div class="card-body">
+                    <div>
+                        <h4 class="card-title">Login</h4>
+                        <p class="card-text">Kindly Enter your credentials to continue</p>
+                    </div>
+                    <div class="form">
+                        <div class="form-group">
+                            <label for="InputEmail1">Email address</label>
+                            <input type="email" [(ngModel)]="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                        </div>
+                        <div class="form-group">
+                            <label for="InputPassword1">Password</label>
+                            <input type="password" [(ngModel)]="password" class="form-control" id="InputPassword1" placeholder="Password">
+                        </div>
+                        <div class="form-check">
+                            <input [(ngModel)]="remember_me" type="checkbox" class="form-check-input" id="Check1">
+                            <label class="form-check-label" for="Check1">Remember Me</label>
+                        </div>
+                        <button (click)="submit()" class="btn btn-primary">Submit</button>
+                        <button class="btn btn-info">Forgot</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
