--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-App Works!
+<nav class="navbar navbar-expand-sm bg-dark">
+    <a class="navbar-brand col-4 offset-5" routerLink="/">Authors Information</a>
+    <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
+        aria-expanded="false" aria-label="Toggle navigation"></button>
+    <div class="collapse navbar-collapse" id="collapsibleNavId">
+    </div>
+</nav>
+
+<router-outlet></router-outlet>
